Wed Dec  9 13:53:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
          On get_many should at least return 1 sample.

        * connectors/dds4ccm/tests/State_Connection_Test/Receiver/State_Connection_Test_Receiver_exec.cpp:
          Return _nil rather than 0.

Wed Dec  9 13:11:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Updater_T.cpp:
          Check whether instance_handle and instance match

Wed Dec  9 12:55:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Event_Connection_Test/Base/Event_Connection_Test_Base.mpc:
        * connectors/dds4ccm/tests/Event_Connection_Test/Connector/Event_Connection_Test_Connector.mpc:
        * connectors/dds4ccm/tests/Event_Connection_Test/Receiver/Event_Connection_Test_Receiver.mpc:
        * connectors/dds4ccm/tests/Event_Connection_Test/Sender/Event_Connection_Test_Sender.mpc:
        * connectors/dds4ccm/tests/Event_Connection_Test/descriptors/Plan.cdp:
          Changed project names in order to resolve fuzz warnings.

Wed Dec  9 12:48:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/SecConnector/ConnectorStatusListener_TestSec_Connector.mpc:
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Sender/ConnectorStatusListener_Test_Sender.mpc:
          Shorten the shared name of DDS_ConnectorStatusListener_TestSec_Connector_lem_stub.

Wed Dec  9 12:40:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Added Local_Facet test

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
          Resolved a bug whereby connection endpoints in the original plan
          would be copied into two separate connections in a child plan.

Wed Dec  9 12:37:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Local_Facet: